// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createMinifyConfig returns the optimization webpack config for minifying the output 1`] = `
Object {
  "devtool": false,
  "optimization": Object {
    "minimize": true,
    "minimizer": Array [
      TerserPlugin {
        "options": Object {
          "cache": true,
          "cacheKeys": [Function],
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minify": undefined,
          "parallel": true,
          "sourceMap": undefined,
          "terserOptions": Object {
            "keep_fnames": true,
          },
          "test": /\\\\\\.jsx\\?\\$/i,
        },
      },
    ],
  },
}
`;

exports[`createOneAppExternals returns the set of externals from added externals in array formation [name, varName] 1`] = `
Object {
  "@americanexpress/one-app-ducks": Object {
    "commonjs2": "@americanexpress/one-app-ducks",
    "root": "OneAppDucks",
    "var": "OneAppDucks",
  },
  "@americanexpress/one-app-router": Object {
    "commonjs2": "@americanexpress/one-app-router",
    "root": "OneAppRouter",
    "var": "OneAppRouter",
  },
  "create-shared-react-context": Object {
    "commonjs2": "create-shared-react-context",
    "root": "CreateSharedReactContext",
    "var": "CreateSharedReactContext",
  },
  "holocron": Object {
    "commonjs2": "holocron",
    "root": "Holocron",
    "var": "Holocron",
  },
  "holocron-module-route": Object {
    "commonjs2": "holocron-module-route",
    "root": "HolocronModuleRoute",
    "var": "HolocronModuleRoute",
  },
  "immutable": Object {
    "commonjs2": "immutable",
    "root": "Immutable",
    "var": "Immutable",
  },
  "prop-types": Object {
    "commonjs2": "prop-types",
    "root": "PropTypes",
    "var": "PropTypes",
  },
  "react": Object {
    "commonjs2": "react",
    "root": "React",
    "var": "React",
  },
  "react-dom": Object {
    "commonjs2": "react-dom",
    "root": "ReactDOM",
    "var": "ReactDOM",
  },
  "react-helmet": Object {
    "commonjs2": "react-helmet",
    "root": "ReactHelmet",
    "var": "ReactHelmet",
  },
  "react-package": Object {
    "commonjs2": "react-package",
    "root": "reactPackage",
    "var": "reactPackage",
  },
  "react-redux": Object {
    "commonjs2": "react-redux",
    "root": "ReactRedux",
    "var": "ReactRedux",
  },
  "redux": Object {
    "commonjs2": "redux",
    "root": "Redux",
    "var": "Redux",
  },
  "reselect": Object {
    "commonjs2": "reselect",
    "root": "Reselect",
    "var": "Reselect",
  },
}
`;

exports[`createOneAppExternals returns the set of externals used by One App 1`] = `
Object {
  "@americanexpress/one-app-ducks": Object {
    "commonjs2": "@americanexpress/one-app-ducks",
    "root": "OneAppDucks",
    "var": "OneAppDucks",
  },
  "@americanexpress/one-app-router": Object {
    "commonjs2": "@americanexpress/one-app-router",
    "root": "OneAppRouter",
    "var": "OneAppRouter",
  },
  "create-shared-react-context": Object {
    "commonjs2": "create-shared-react-context",
    "root": "CreateSharedReactContext",
    "var": "CreateSharedReactContext",
  },
  "holocron": Object {
    "commonjs2": "holocron",
    "root": "Holocron",
    "var": "Holocron",
  },
  "holocron-module-route": Object {
    "commonjs2": "holocron-module-route",
    "root": "HolocronModuleRoute",
    "var": "HolocronModuleRoute",
  },
  "immutable": Object {
    "commonjs2": "immutable",
    "root": "Immutable",
    "var": "Immutable",
  },
  "prop-types": Object {
    "commonjs2": "prop-types",
    "root": "PropTypes",
    "var": "PropTypes",
  },
  "react": Object {
    "commonjs2": "react",
    "root": "React",
    "var": "React",
  },
  "react-dom": Object {
    "commonjs2": "react-dom",
    "root": "ReactDOM",
    "var": "ReactDOM",
  },
  "react-helmet": Object {
    "commonjs2": "react-helmet",
    "root": "ReactHelmet",
    "var": "ReactHelmet",
  },
  "react-redux": Object {
    "commonjs2": "react-redux",
    "root": "ReactRedux",
    "var": "ReactRedux",
  },
  "redux": Object {
    "commonjs2": "redux",
    "root": "Redux",
    "var": "Redux",
  },
  "reselect": Object {
    "commonjs2": "reselect",
    "root": "Reselect",
    "var": "Reselect",
  },
}
`;

exports[`createOneAppExternals returns the set of externals used by One App including added externals 1`] = `
Object {
  "@americanexpress/one-app-ducks": Object {
    "commonjs2": "@americanexpress/one-app-ducks",
    "root": "OneAppDucks",
    "var": "OneAppDucks",
  },
  "@americanexpress/one-app-router": Object {
    "commonjs2": "@americanexpress/one-app-router",
    "root": "OneAppRouter",
    "var": "OneAppRouter",
  },
  "create-shared-react-context": Object {
    "commonjs2": "create-shared-react-context",
    "root": "CreateSharedReactContext",
    "var": "CreateSharedReactContext",
  },
  "holocron": Object {
    "commonjs2": "holocron",
    "root": "Holocron",
    "var": "Holocron",
  },
  "holocron-module-route": Object {
    "commonjs2": "holocron-module-route",
    "root": "HolocronModuleRoute",
    "var": "HolocronModuleRoute",
  },
  "immutable": Object {
    "commonjs2": "immutable",
    "root": "Immutable",
    "var": "Immutable",
  },
  "prop-types": Object {
    "commonjs2": "prop-types",
    "root": "PropTypes",
    "var": "PropTypes",
  },
  "react": Object {
    "commonjs2": "react",
    "root": "React",
    "var": "React",
  },
  "react-dom": Object {
    "commonjs2": "react-dom",
    "root": "ReactDOM",
    "var": "ReactDOM",
  },
  "react-helmet": Object {
    "commonjs2": "react-helmet",
    "root": "ReactHelmet",
    "var": "ReactHelmet",
  },
  "react-package": Object {
    "commonjs2": "react-package",
  },
  "react-redux": Object {
    "commonjs2": "react-redux",
    "root": "ReactRedux",
    "var": "ReactRedux",
  },
  "redux": Object {
    "commonjs2": "redux",
    "root": "Redux",
    "var": "Redux",
  },
  "reselect": Object {
    "commonjs2": "reselect",
    "root": "Reselect",
    "var": "Reselect",
  },
}
`;
